@startuml

title __APP's Class Diagram__\n

  package e.group.login {
    class BuildConfig {
    }
  }
  

  package e.group.login {
    class ExampleInstrumentedTest {
    }
  }
  

  package e.group.login {
    class LoginActivity {
    }
  }
  

  package e.group.login {
    class MapsActivity {
    }
  }
  

  package e.group.login {
    class RegisterActivity {
    }
  }
  

  package e.group.login {
    class SessionHandler {
    }
  }
  

  package e.group.login {
    class User {
    }
  }
  

  LoginActivity -up-|> AppCompatActivity
  LoginActivity o-- SessionHandler : session
  MapsActivity -up-|> OnMapReadyCallback
  MapsActivity -up-|> OnMyLocationButtonClickListener
  MapsActivity -up-|> OnMyLocationClickListener
  MapsActivity -up-|> FragmentActivity
  RegisterActivity -up-|> AppCompatActivity
  RegisterActivity o-- SessionHandler : session


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
